Add Solar Wheel and electromagnetic holder